...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="258dp"
        android:layout_marginLeft="258dp"
        android:layout_marginRight="16dp"
...
